<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckg_color"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/accent_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnGetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_data"
        android:backgroundTint="@color/strong_color"
        android:onClick="onBtnGetDataClick"
        app:layout_constraintTop_toBottomOf="@id/edFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp" />

    <Switch
        android:id="@+id/swUseAsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/use_async_switch"
        android:trackTint="@color/strong_color"
        android:thumbTint="@color/intensive_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/btnGetData"
        app:layout_constraintTop_toTopOf="@id/btnGetData" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tvStatus_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGetData" />
    <ListView
        android:id="@+id/lvItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="4dp"
        android:divider="@color/intensive_color"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:fadeScrollbars="false"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp" />
</androidx.constraintlayout.widget.ConstraintLayout>